// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePhotoGroup /> errors when a non-button is passed 1`] = `
"Warning: Failed prop type: \`ProfilePhotoGroup.children\` only accepts components matching the regular expression /(?:Tooltip|Permission|Trebuchet|ERF)|(?:ProfilePhoto)$/
    in ProfilePhotoGroup"
`;

exports[`<ProfilePhotoGroup /> handles components that return a falsy value 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <FakePhoto
      inline={false}
      key=".0"
      size={5}
      square={false}
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> handles photos that return falsy values 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders a remainder cell when the max is met 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="remainder"
  >
    <div
      className="remainder_15l21mp-o_O-inline-0_ksaxgv"
    >
      <span
        className="remainderNumber_d1qlh4"
      >
        +2
      </span>
    </div>
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders a single photo 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders photos 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="1"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="2"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".2"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> supports custom sizes 1`] = `
<div
  className="group_1yr212"
>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="1"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell_z0wimt-o_O-inline-0_1j63ti"
    key="2"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".2"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;
